# Copilot-Studio-Client-And-Eval-Runner-Python

./: .env.sample  .gitignore  CLAUDE.md  README.md  chat.py  config.py  evaluate.py  judge.py  pyproject.toml  sample_eval.csv  todo.md
.claude/: settings.local.json
